# mbf-singlecell-plotter

./: .gitignore  README.md  flake.nix  pyproject.toml  result
dev/: loop_pytest.sh  refactor-plan.md  review-image-changes.py
src/mbf_singlecell_plotter/: __init__.py  colorbar.py  data.py  interactive.py  plots.py  theme.py  transforms.py  util.py
tests/: conftest.py  debug_interactive.py  image_comparison.py  test_images.py  test_matrix.py  test_unit.py
