[project]
name = "mbf-singlecell-plotter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
 "anndata>=0.12.0",
 "dppd>=0.31",
 "dppd-plotnine>=0.2.9",
 "natsort>=8.4.0",
 "numpy>=2.2.3",
 "pandas>=2.0.1",
 "pillow>=12.0.0",
 "plotnine>=0.15.0",
 "scikit-image>=0.26.0",
]

# [project.scripts]
# hello = "hello_world:hello"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "scikit-image>=0.24",
    "scipy>=1.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
